changed the original for the number guesser project.

--- a/css/style7.css
+++ b/css/style7.css
@@ -5,6 +5,14 @@
 	height: 100%;
 	top: 0;
 	left: 0;
+	background: rgba(204,202,51,0.9);
+}
+
+.lose {
+	background: rgba(204,51,83,0.9);
+}
+
+.win {
 	background: rgba(153,204,51,0.9);
 }
 
@@ -22,6 +30,53 @@
 	color: transparent;
 	outline: none;
 	z-index: 100;
+}
+
+/* Text Style */
+
+.sameAsNav {
+	text-align: center;
+	position: relative;
+	top: 50%;
+	height: 60%;
+	-webkit-transform: translateY(-50%);
+	transform: translateY(-50%);
+}
+
+.sameAsUL {
+	list-style: none;
+	padding: 0;
+	margin: 0 auto;
+	display: inline-block;
+	height: 100%;
+	position: relative;
+}
+
+.sameAsLI {
+	display: block;
+	height: 20%;
+	height: calc(100% / 5);
+	min-height: 54px;
+	-webkit-backface-visibility: hidden;
+	backface-visibility: hidden;
+}
+
+.sameAsLI * {
+	font-size: 40px;
+	font-weight: 300;
+	display: block;
+	color: #fff;
+	-webkit-transition: color 0.2s;
+	transition: color 0.2s;
+}
+
+.sameAsLI a {
+	font-size: 72px;
+}
+
+.sameAsLI *:hover,
+.sameAsLI *:focus {
+	color: #f0f0f0;
 }
 
 /* Menu style */
